force-app/main/default/objects/Lead__c/fields/Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Click here to find the customer, if not found search &quot;NEW” &amp; select it.</inlineHelpText>
    <label>Existing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>