force-app/main/default/objects/Lead__c/fields/Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Converted?</label>
    <type>Checkbox</type>
</CustomField>