force-app/main/default/objects/Lead__c/fields/IsNew_Account__c.field-meta.xml
<CustomField>
    <fullName>IsNew_Account__c</fullName>
    <formula>Existing_Account__r.Name = &quot;NEW&quot;</formula>
    <label>IsNew Account?</label>
    <type>Checkbox</type>
</CustomField>